Finish project, improve if necessary

--- a/rps.html
+++ b/rps.html
@@ -14,8 +14,10 @@
     <h2>Are you ready? Make your choice:</h2>
     <button id="foot" onclick="playerSelectionFoot()">Foot</button>
     <button id="cockroach" onclick="playerSelectionCockroach()">Cockroach</button>
-    <button id="nuclear bomb" onclick="playerSelectionNuclear()">Nuclear bomb</button><br>
+    <button id="nuclear" onclick="playerSelectionNuclear()">Nuclear bomb</button><br>
     <p id="result"></p>
+    <p id="scores"></p>
+    <p id="roundend"></p>
   </div>
   <script type="text/javascript" src="scripts/main.js"></script>
 </body>
