--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div align="center">
     <h1>Play a round of</h1>
-    <p>Foot<br>Cockroach<br>Nuclear bomb</p>
+    <p>Cockroach<br>Foot<br>Nuclear bomb</p>
+    <p id="rules">The rules are very simple:<br>
+      Foot squashes cockroach, nuclear bomb blows up foot, and cockroach survives nuclear bomb.</p>
     <h2>Are you ready? Make your choice:</h2>
     <button id="foot" onclick="playerSelectionFoot()">Foot</button>
     <button id="cockroach" onclick="playerSelectionCockroach()">Cockroach</button>
